# Type-4-QRCodeGenerator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt  ErCorCodewordsGenerator.cpp  ErCorCodewordsGenerator.h  FormatStringGenerator.cpp  FormatStringGenerator.h  GF256.h  QRGenerator.cpp  QRGenerator.h  QRMatrix.cpp  QRMatrix.h  alphanumericConverter.h  analyzer.h  byteConverter.h  domain.h  main.cpp  numericConverter.h  penalty_calculation.cpp  polynomialGenerator.h  renderer.cpp  renderer.h  start_program.cpp  stringConverter.cpp  stringConverter.h
tests/: CMakeLists.txt  ErCorGenerator_test.cpp  QRGenerator_test.cpp  alphanumeric_test.cpp  analyzer_test.cpp  byte_test.cpp  example1.txt  numeric_test.cpp  penalty_test.cpp  polynomialGenerator_test.cpp  stringConverter_test.cpp
